[REF] refactored some wndpoints
